# car-part-core-micro/src/main/java/com/gini/error/ErrorResponse.java
@@ -1,4 +1,0 @@
-package com.gini.error;
-
-public record ErrorResponse(int status, String message) {
-}
