# car-part-core-micro/src/main/java/com/gini/error/handler/GlobalErrorHandler.java
@@ -1,6 +1,7 @@
 package com.gini.error.handler;
 
-import com.gini.error.ErrorResponse;
+
+import com.gini.dto.ErrorResponse;
 import com.gini.error.exceptions.NotFoundException;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
@@ -16,7 +17,7 @@ public class GlobalErrorHandler {
     @ExceptionHandler(NotFoundException.class)
     public ErrorResponse handleNotFoundException(NotFoundException ex) {
       log.error("Error: ", ex);
-        return new ErrorResponse(HttpStatus.NOT_FOUND.value(), ex.getMessage());
+        return new ErrorResponse(ex.getMessage(), HttpStatus.NOT_FOUND.value());
     }
 
 
